=== fitdistrplus : Help to fit of a parametric distribution ===

Version 1.0-5
=============
NEW FEATURES
- update starting/fixing values in ***dist(cens) functions.
- update graphics for bootstrap procedure.
- add argument do.points in cdfcomp.
- add arguments weights in mledist.
- add argument keepdata in fitdist.

BUG FIXES
- defensive programming in plotdist, cdfcomp,...
- simplify plotting curves in cdfcomp where seq(xmin, xmax, by=1) was used.

Version 1.0-4
=============
- release for the JSS publication.

Version 1.0-3
=============

NEW FEATURES
- new generic functions for fitdist(cens): loglik, vcov and coef.
- vignette updated to the version of a paper accepted by the 
Journal of Statistical Software.
- add of an argument discrete in fitdist in order to be able to take into
account non classical discrete distributions while plotting the fit with plot.fitdist or cdfcomp 
and while calculating goodness-of-fit statistics with gofstat (add of an example : fit of a zero
inflate Poisson distribution).
- add of an S3 class for descdist and a print method.

BUG FIXES
- fitdist can handle non invertible Hessian matrices.
- 


Version 1.0-2
=============

NEW FEATURES
- plotdist can plot empirical density as an histogram, a density plot 
or both superimposed.
- a strong warning was added to the documentation of function descdist
about the problematic high variance of skewness and kurtosis.

BUG FIXES
- bug fixed in bootdistcens : argument fix.arg is now correctly passed to mle


Version 1.0-1
=============

NEW FEATURES
- gofstat can handle multiple 'fitdist' objects.
- plotdist for discrete data is slightly enhanced.

Version 1.0-0
=============

NEW FEATURES
- update cdfcomp and add denscomp, ppcomp and qqcomp functions.
- add of an argument Turnbull.confint to functions plotdistcens and cdfcompcens in order to 
    draw confidence intervals on the empirical distribution only if requested.