@@ -12,7 +12,7 @@
 }
 
 \usage{
-bootdist(f, bootmethod="param", niter=1001)
+bootdist(f, bootmethod="param", niter=1001, silent=TRUE)
 \method{print}{bootdist}(x, \dots)
 \method{plot}{bootdist}(x, main="Bootstrapped values of parameters", enhance=FALSE, 
     trueval=NULL, rampcol=NULL, nbgrid = 100, nbcol = 100, \dots)
@@ -25,6 +25,8 @@ bootdist(f, bootmethod="param", niter=1001)
 \item{bootmethod}{ A character string coding for the type of resampling : \code{"param"} 
   for a parametric resampling and \code{"nonparam"} for a nonparametric resampling of data.}
 \item{niter}{ The number of samples drawn by bootstrap.  }
+\item{silent}{A logical to remove or show warnings and errors when bootstraping.}
+
 \item{x}{ An object of class \code{"bootdist"}.  }
 \item{object}{ An object of class \code{"bootdist"}.  }
 \item{main}{an overall title for the plot: see \code{\link{title}},
